[tool.poetry]
name = "style-tests"
version = "0.1.0"
description = "TestCase checking the code quality"
authors = ["Filip Zyzniewski <filip.zyzniewski@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
